--- a/Project1_3/assets/style.css
+++ b/Project1_3/assets/style.css
@@ -12,7 +12,6 @@ body {
 .header {
     writing-mode: vertical-rl;
     text-orientation: upright;
-    margin: auto;
     margin-left: 75px;
     font-size: 90px;
     text-align: left;
@@ -24,14 +23,15 @@ body {
     z-index: 1;
 }
 
-.Letter {
+.Letter h1{
     font-family: "modesto-text",serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 80px;
+    font-size: 275px;
     position: absolute;
-    margin-top: -700px;
-    margin-left: 370px;
+    height: 300px;
+    margin-top: -670px;
+    margin-left: 325px;
 }
 
 .rightcircle {
@@ -44,10 +44,10 @@ body {
     border-bottom: 0;
     transform: rotate(270deg);
     margin-top: -570px;
-    margin-left: 530px
+    margin-left: 530px;
 }
 
-.Sample {
+.Sample p{
     z-index: 1; 
     font-family: "modesto-text",serif;
     font-style: normal;
@@ -55,16 +55,16 @@ body {
     text-align: center;
     font-size: 30px;
     margin-top: 120px;
-    margin-left: -25px;
+    margin-left: 0px;
     line-height: 50px;
     writing-mode: vertical-rl;
 }
 
-.Button {
-    position: relative;
-    z-index: 1;
-    margin-top: -240px;
-    margin-left: 265px
+#Button {
+    z-index: 30;
+    position: absolute;
+    margin-top: -535px;
+    margin-left: 635px;
 }
 
 .topcircle {
@@ -76,11 +76,11 @@ body {
     border: 10px solid black;
     border-bottom: 0;
     transform: rotate(180deg);
-    margin-top: -610px;
-    margin-left: 300px
+    margin-top: -615px;
+    margin-left: 300px;
 }
 
-.Information {
+.Information p{
     transform: rotate(180deg);
     font-family: "modesto-text", serif; 
     font-style: normal;
@@ -89,7 +89,7 @@ body {
     width: 300px;
     height: 200px;
     text-align: center;
-    margin-left: 75px
+    margin-left: 75px;
 }
 
 .bottomcircle {
@@ -100,14 +100,14 @@ body {
     border-top-right-radius: 495px;
     border: 10px solid black;
     border-bottom: 0;
-    transform: rotatae(0deg);
+    transform: rotate(0deg);
     margin-top: 555px;
-    margin-left: 300px
+    margin-left: 300px;
 }
 
 .Image {
     margin-top: 25px;
-    margin-left: 200px
+    margin-left: 200px;
 }
 
 .SelfInfo {
@@ -116,7 +116,7 @@ body {
     font-weight: 300;
     font-size: 20px;
     text-align: center;
-    margin-top: -15px
+    margin-top: -15px;
 }
 
 .Sources {
@@ -125,11 +125,26 @@ body {
     font-weight: 300;
     font-size: 15px;
     text-align: center;
-    margin-top: -15px
+    margin-top: -15px;
 }
 
 .center {
     position: absolute;
     z-index: -1;
-    margin-top: -1024px
+    margin-top: -1024px;
+}
+
+.empty {    
+    border-radius: 50%;
+}
+
+.analysisX {
+    border-radius: 50%;
+}
+
+.analysis {
+    position: absolute;
+    z-index: 20;
+    top: 367px;
+    left: 1165px; 
 }
