--- a/Project1_3/assets/style.css
+++ b/Project1_3/assets/style.css
@@ -43,7 +43,8 @@ body {
     border: 10px solid black;
     border-bottom: 0;
     transform: rotate(270deg);
-    margin-top: -650px;
+    position: absolute;
+    margin-top: -600px;
     margin-left: 530px;
 }
 
@@ -63,7 +64,7 @@ body {
 #Button {
     z-index: 30;
     position: absolute;
-    margin-top: -615px;
+    margin-top: -565px;
     margin-left: 635px;
 }
 
@@ -76,7 +77,8 @@ body {
     border: 10px solid black;
     border-bottom: 0;
     transform: rotate(180deg);
-    margin-top: -535px;
+    position: absolute;
+    margin-top: -1024px;
     margin-left: 300px;
 }
 
@@ -102,7 +104,7 @@ body {
     border-bottom: 0;
     transform: rotate(0deg);
     position: absolute;
-    margin-top: 555px;
+    margin-top: -235px;
     margin-left: 300px;
 }
 
@@ -132,7 +134,7 @@ body {
 .center {
     position: absolute;
     z-index: -10;
-    margin-top: -230px;
+    margin-top: -1024px;
 }
 
 .empty {    
