--- a/Project1_3/assets/style.css
+++ b/Project1_3/assets/style.css
@@ -4,7 +4,7 @@ body {
     margin:auto;
     max-height: 1024px;
     max-width: 768px;        
-    border: 5px solid white;
+    border: 5px solid #000;
     height: 1024px;
     width: 768px;
 }
@@ -104,7 +104,7 @@ body {
     border-bottom: 0;
     transform: rotate(0deg);
     position: absolute;
-    margin-top: -235px;
+    margin-top: -230px;
     margin-left: 300px;
 }
 
@@ -134,7 +134,7 @@ body {
 .center {
     position: absolute;
     z-index: -10;
-    margin-top: -1024px;
+    margin-top: -1019px;
 }
 
 .empty {    
