--- a/Project1_3/assets/style.css
+++ b/Project1_3/assets/style.css
@@ -141,9 +141,11 @@ body {
     border-radius: 50%;
 }
 
-.analysiscircle {
+/*
+ .analysiscircle {
     border-radius: 50%;
-}
+} 
+*/
 
 .analysis {
     position: absolute;
