--- a/Project1_3/assets/style.css
+++ b/Project1_3/assets/style.css
@@ -126,9 +126,12 @@ body {
     font-family: "modesto-text", serif; 
     font-style: normal;
     font-weight: 300;
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
     margin-top: -15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
 }
 
 .center {
