--- a/Project2_2_Wireframe/template3/assets/style_2.css
+++ b/Project2_2_Wireframe/template3/assets/style_2.css
@@ -11,27 +11,35 @@ body {
 }
 
 .Header {
-    font-family: "copperplate",serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 27px;
-    position: relative;
-    left: 30px;
-    top: 10px;
+    height: 150px;
+    width: 700px;
+    background-color: #000;   
 }
 
 .Subheader {
-    font-family: "copperplate",serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 27px;
-    width: 850px;
-    position: relative;
-    left: 30px;
-    top: 20px;
+    height: 100px;
+    width: 700px;
+    background-color: gray;
 }
 
-.Reveal1_1 {
+.Pathway {
+    height: 768px;
+    width: 325px;
+    background-color: white;
+    position: relative; 
+    top: -250px;
+    left: 700px;
+    z-index: -1
+}
+
+.Next {
+    position: absolute;
+    top: 700px;
+    left: 1150px;
+    font-size: 30px;
+}
+
+.Reveal1_2 {
     background-color: #0c3021;
     color: white;
     cursor: pointer;
@@ -45,10 +53,10 @@ body {
     outline: none;
     font-size: 30px;
     position: relative;
-    top: 75px;
+    top: -775px;
 }
 
-.active, .Reveal1_1:hover {
+.active, .Reveal1_2:hover {
     background-color: #21634c;
 }
 
@@ -63,10 +71,10 @@ body {
     font-size: 30px;
     text-align: center;
     position: relative;
-    top: 75px;
+    top: -775px;
 }
 
-.Reveal2_1 {
+.Reveal2_2 {
     background-color: #0c3021;
     color: white;
     cursor: pointer;
@@ -80,10 +88,10 @@ body {
     outline: none;
     font-size: 30px;
     position: relative;
-    top: 100px;
+    top: -725px;
 }
 
-.active, .Reveal2_1:hover {
+.active, .Reveal2_2:hover {
     background-color: #21634c;
 }
 
@@ -98,10 +106,10 @@ body {
     font-size: 30px;
     text-align: center;
     position: relative;
-    top: 100px;
+    top: -725px;
 }
 
-.Reveal3_1 {
+.Reveal3_2 {
     background-color: #0c3021;
     color: white;
     cursor: pointer;
@@ -115,10 +123,10 @@ body {
     outline: none;
     font-size: 30px;
     position: relative;
-    top: 125px;
+    top: -675px;
 }
 
-.active, .Reveal3_1:hover {
+.active, .Reveal3_2:hover {
     background-color: #21634c;
 }
 
@@ -133,28 +141,5 @@ body {
     font-size: 30px;
     text-align: center;
     position: relative;
-    top: 125px;
-}
-
-.Pathway {
-    position: absolute;
-    top: 60px;
-    left: 1160px;
-    z-index: -1;
-}
-
-.Next {
-    position: absolute;
-    top: 700px;
-    left: 750px;
-}
-
-.Note {
-    font-family: "century-old-style-std",serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    position: absolute;
-    top: 650px;
-    left: 500px
+    top: -675px;
 }
