--- a/Project2_2/Page9/assets/style.css
+++ b/Project2_2/Page9/assets/style.css
@@ -10,21 +10,21 @@ body {
     width: 1024px;
 }
 
-.Header {
+.Header h1 {
     font-family: "copperplate",serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 22px;
+    font-size: 44px;
     position: relative;
     left: 20px;
     top: 10px;
 }
 
-.Subheader {
+.Subheader h2 {
     font-family: "copperplate",serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 17px;
+    font-size: 27px;
     width: 850px;
     position: relative;
     left: 20px;
@@ -34,13 +34,14 @@ body {
 .Pathway {
     position: relative;
     top: -65px;
-    left: 800px;
+    left: 795px;
+    z-index: -1;
 }
 
 .NextButton {
     position: relative;
-    top: -150px;
-    left: 800px;
+    top: -155px;
+    left: 805px;
 }
 
 * {
