--- a/Project3/assets/project1.css
+++ b/Project3/assets/project1.css
@@ -8,6 +8,11 @@
     margin-left: .625rem;
 }
 
+.menu:hover {
+    background-color: #fff;
+    color: #818181;
+}
+
 body {
     border-left: .1875rem solid #000;
     border-right: .1875rem solid #000;
@@ -229,4 +234,10 @@ body {
     background-color: #959a9d;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        width: 48rem;
+    }
 }
